--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Pomodoro Timer</title>
 </head>
 <body>
+    <h1 id="titulo">Pomodoro fitness</h1>
+    <p id="subtitulo">Tenha produtividade junto com qualidade de vida!</p>
+
+    <div id="timer"></div>
+
+
     
     <script src="js/script.js"></script>
+
+
+
 </body>
 </html>
