--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Pomodoro Timer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1 id="titulo">Pomodoro fitness</h1>
     <p id="subtitulo">Tenha produtividade junto com qualidade de vida!</p>
 
-    <div id="timer"></div>
+    <div id="timer">Tempo: 00:00</div>
+    <div id="atividade"></div>
+    <button id="botaoiniciar">Iniciar timer</button>
+    <div id="botaopausar"></div>
+    <div id="botaocontinuar"></div>
+    <div id="botaoreiniciar"></div>
 
 
-    
+
     <script src="js/script.js"></script>
 
 
