--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 
     <div id="timer">Tempo: 00:00</div>
     <div id="atividade"></div>
+    
+    <div class = "containerbt">
     <button id="botaoiniciar">Iniciar timer</button>
     <div id="botaopausar"></div>
     <div id="botaocontinuar"></div>
     <div id="botaoreiniciar"></div>
+    </div>
 
 
 
