update add layout dark light

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="app">
 
-        <button id="taggle-mode">
+        <button id="toggle-mode">
             <span class="sr-only">ativar light mode</span>
             <i class="ph-bold ph-sun"></i>
             <i class="ph-bold ph-moon"></i>
