update index.html text

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Timer</title>
     <link rel="stylesheet" href="css/style.css">
-
-    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-png">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
@@ -16,7 +15,7 @@
     <div id="app">
 
         <button id="toggle-mode">
-            <span class="sr-only">ativar light mode</span>
+            <span class="sr-only">light mode</span>
             <i class="ph-bold ph-sun"></i>
             <i class="ph-bold ph-moon"></i>
         </button>
@@ -34,13 +33,13 @@
 
         <video id="background-video" autoplay loop muted>
             <source src="assets/video-galax.mp4" type="video/mp4">
-            Seu navegador não suporta vídeos em HTML5.
+            Your browser does not support HTML5 videos
           </video>
           
 
         <h2 id="name_exercicio"></h2>
         <h3 id="dificuldade_exercicio"></h3>
-        <p id="descricao_exercicio">wait</p>
+        <p id="descricao_exercicio"></p>
         <p id="contador"></p>
         <p id="exercicio_concluido"></p>
 
