--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p id="contador"></p>
         <p id="exercicio_concluido"></p>
 
-        <p id="pblink">Click the button below to mark the number of exercises performed.</p>
+        <p id="pblink"><em>Click the button below to mark the number of exercises performed.</em></p>
         <button id="exercise_completed">exercise completed</button>
 
     </div>
